; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_debug.c_AAS_DrawPermanentCross.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_debug.c_AAS_DrawPermanentCross.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)*, i32 (i32, float*, float*, i32)* }

@botimport = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AAS_DrawPermanentCross(float* %0, float %1, i32 %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca float*, align 8
  %10 = alloca float*, align 8
  store float* %0, float** %4, align 8
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %11

11:                                               ; preds = %47, %3
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 3
  br i1 %13, label %14, label %50

14:                                               ; preds = %11
  %15 = load float*, float** %4, align 8
  %16 = load float*, float** %9, align 8
  %17 = call i32 @VectorCopy(float* %15, float* %16)
  %18 = load float, float* %5, align 4
  %19 = load float*, float** %9, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds float, float* %19, i64 %21
  %23 = load float, float* %22, align 4
  %24 = fadd float %23, %18
  store float %24, float* %22, align 4
  %25 = load float*, float** %4, align 8
  %26 = load float*, float** %10, align 8
  %27 = call i32 @VectorCopy(float* %25, float* %26)
  %28 = load float, float* %5, align 4
  %29 = load float*, float** %10, align 8
  %30 = load i32, i32* %7, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds float, float* %29, i64 %31
  %33 = load float, float* %32, align 4
  %34 = fsub float %33, %28
  store float %34, float* %32, align 4
  %35 = load float*, float** %9, align 8
  %36 = load float*, float** %10, align 8
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @AAS_DebugLine(float* %35, float* %36, i32 %37)
  %39 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 0), align 8
  %40 = call i32 (...) %39()
  store i32 %40, i32* %8, align 4
  %41 = load i32 (i32, float*, float*, i32)*, i32 (i32, float*, float*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 1), align 8
  %42 = load i32, i32* %8, align 4
  %43 = load float*, float** %9, align 8
  %44 = load float*, float** %10, align 8
  %45 = load i32, i32* %6, align 4
  %46 = call i32 %41(i32 %42, float* %43, float* %44, i32 %45)
  br label %47

47:                                               ; preds = %14
  %48 = load i32, i32* %7, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %7, align 4
  br label %11

50:                                               ; preds = %11
  ret void
}

declare dso_local i32 @VectorCopy(float*, float*) #1

declare dso_local i32 @AAS_DebugLine(float*, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
